--- a/DiscreteMathematics/index.html
+++ b/DiscreteMathematics/index.html
@@ -588,7 +588,7 @@
 <li>Complex Numbers(복소수)</li>
 </ul>
 <blockquote>
-<p>Q2. What is symbol for the Natural Numbers?</p>
+<p>Q2. What is symbol for the Natural Numbers? - N</p>
 </blockquote>
 </li>
 <li>
@@ -641,16 +641,14 @@
 <li>Mathematical Physics(수리물리학)</li>
 <li>Fluid Dynamics(유체역학)</li>
 </ul>
+<br/>
 <h2 id="-discrete-mathematics" style="position:relative;"><a href="#-discrete-mathematics" aria-label=" discrete mathematics permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>🌀 Discrete Mathematics</h2>
 <p>이산적인 수학 구조에 대해 연구하는 학문.</p>
 <p>연속되지 않는 공간을 다루는 데, 유한수학이라고도 하며, 전산학적인 측면을 강조할 때는 전산수학이라고도 한다.</p>
 <p>주로 정수, 유한 그래프, 형식 언어 같이 가산집합(countable set)에 속하는 개념을 다룬다.</p>
 <p>이산수학은 전산학의 기초가 되는데, 이것은 컴퓨터에서 다루는 자료형이 이산적이라는 것에서 기안한다. 이산수학에서 나온 개념과 기호는 컴퓨터알고리즘과 프로그래밍 언어의 문제나 대상들을 연구하는 데 유용하다.</p>
 <blockquote>
-<p>Q3. 이산수학을 영어로?</p>
-<ul>
-<li>Discrete Mathematics</li>
-</ul>
+<p>Q3. 이산수학을 영어로? - Discrete Mathematics</p>
 </blockquote>
 <h3 id="이산수학의-주제" style="position:relative;"><a href="#%EC%9D%B4%EC%82%B0%EC%88%98%ED%95%99%EC%9D%98-%EC%A3%BC%EC%A0%9C" aria-label="이산수학의 주제 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>이산수학의 주제</h3>
 <ul>
