--- a/DiscreteMathematics/index.html
+++ b/DiscreteMathematics/index.html
@@ -579,7 +579,7 @@
 <h3 id="pure-mathematics" style="position:relative;"><a href="#pure-mathematics" aria-label="pure mathematics permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Pure Mathematics</h3>
 <ol>
 <li>
-<p>Quantity - Arithmetic(산술)</p>
+<p><strong>Quantity - Arithmetic(산술)</strong></p>
 <ul>
 <li>Natural Numbers(자연수): N</li>
 <li>Integers(정수): Z</li>
@@ -593,12 +593,14 @@
 </li>
 <li>
 <p>🌟 <strong>Structure - Algebra(대수학)</strong></p>
-<p>이산수학의 Main Contents</p>
+<p>=> 이산수학의 Main Contents</p>
 <p>代(대신하다 대) 1, 2, ... , x, y, z</p>
 <ul>
 <li>
 <p>Combinatorics(조합론)</p>
-<p>순열, 조합</p>
+<ul>
+<li>순열, 조합</li>
+</ul>
 </li>
 <li>Number Theory(수론)</li>
 <li>Group Theory(군론)</li>
@@ -607,7 +609,7 @@
 </ul>
 </li>
 <li>
-<p>Space - Geometry(기하학)</p>
+<p><strong>Space - Geometry(기하학)</strong></p>
 <ul>
 <li>Trigonometry(삼각법/삼각함수)</li>
 <li>Differential Geometry(미분기하학)</li>
@@ -616,7 +618,7 @@
 </ul>
 </li>
 <li>
-<p>Change - Analysis(해석학)</p>
+<p><strong>Change - Analysis(해석학)</strong></p>
 <p>변화를 다루는 것</p>
 <ul>
 <li>Calculus(미적분학)</li>
