--- a/DiscreteMathematics/index.html
+++ b/DiscreteMathematics/index.html
@@ -583,9 +583,7 @@
 <li>Theory of Computation (계산이론)</li>
 </ul>
 <h3 id="pure-mathematics" style="position:relative;"><a href="#pure-mathematics" aria-label="pure mathematics permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Pure Mathematics</h3>
-<ol>
-<li>
-<p><strong>Quantity - Arithmetic(산술)</strong></p>
+<h4 id="1-quantity---arithmetic산술" style="position:relative;"><a href="#1-quantity---arithmetic%EC%82%B0%EC%88%A0" aria-label="1 quantity   arithmetic산술 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>1. <strong>Quantity - Arithmetic(산술)</strong></h4>
 <ul>
 <li>Natural Numbers(자연수): N</li>
 <li>Integers(정수): Z</li>
@@ -594,11 +592,9 @@
 <li>Complex Numbers(복소수)</li>
 </ul>
 <blockquote>
-<p>Q2. What is symbol for the Natural Numbers? - N</p>
+<h4 id="q2-what-is-symbol-for-the-natural-numbers---n" style="position:relative;"><a href="#q2-what-is-symbol-for-the-natural-numbers---n" aria-label="q2 what is symbol for the natural numbers   n permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Q2. What is symbol for the Natural Numbers? - N</h4>
 </blockquote>
-</li>
-<li>
-<p>🌟 <strong>Structure - Algebra(대수학)</strong></p>
+<h4 id="2--structure---algebra대수학" style="position:relative;"><a href="#2--structure---algebra%EB%8C%80%EC%88%98%ED%95%99" aria-label="2  structure   algebra대수학 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>2. 🌟 <strong>Structure - Algebra(대수학)</strong></h4>
 <p>=> 이산수학의 Main Contents</p>
 <p>代(대신하다 대) 1, 2, ... , x, y, z</p>
 <ul>
@@ -613,18 +609,14 @@
 <li>Graph Theory(그래프 이론)</li>
 <li>Order Theory(순서론)</li>
 </ul>
-</li>
-<li>
-<p><strong>Space - Geometry(기하학)</strong></p>
+<h4 id="3-space---geometry기하학" style="position:relative;"><a href="#3-space---geometry%EA%B8%B0%ED%95%98%ED%95%99" aria-label="3 space   geometry기하학 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>3. <strong>Space - Geometry(기하학)</strong></h4>
 <ul>
 <li>Trigonometry(삼각법/삼각함수)</li>
 <li>Differential Geometry(미분기하학)</li>
 <li>Topology(위상수학)</li>
 <li>Fractal Geometry(프랙탈 기하학)</li>
 </ul>
-</li>
-<li>
-<p><strong>Change - Analysis(해석학)</strong></p>
+<h4 id="4-change---analysis해석학" style="position:relative;"><a href="#4-change---analysis%ED%95%B4%EC%84%9D%ED%95%99" aria-label="4 change   analysis해석학 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>4. <strong>Change - Analysis(해석학)</strong></h4>
 <p>변화를 다루는 것</p>
 <ul>
 <li>Calculus(미적분학)</li>
@@ -633,8 +625,6 @@
 <li>Dynamical System(동역학계)</li>
 <li>Chaos Theory(혼돈이론)</li>
 </ul>
-</li>
-</ol>
 <h3 id="applied-mathematics" style="position:relative;"><a href="#applied-mathematics" aria-label="applied mathematics permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Applied Mathematics</h3>
 <p>: Statistics, Decision Sciences and Computational Mathematics</p>
 <ul>
@@ -656,7 +646,7 @@
 <p>주로 정수, 유한 그래프, 형식 언어 같이 가산집합(countable set)에 속하는 개념을 다룬다.</p>
 <p>이산수학은 전산학의 기초가 되는데, 이것은 컴퓨터에서 다루는 자료형이 이산적이라는 것에서 기안한다. 이산수학에서 나온 개념과 기호는 컴퓨터알고리즘과 프로그래밍 언어의 문제나 대상들을 연구하는 데 유용하다.</p>
 <blockquote>
-<p>Q3. 이산수학을 영어로? - Discrete Mathematics</p>
+<h4 id="q3-이산수학을-영어로---discrete-mathematics" style="position:relative;"><a href="#q3-%EC%9D%B4%EC%82%B0%EC%88%98%ED%95%99%EC%9D%84-%EC%98%81%EC%96%B4%EB%A1%9C---discrete-mathematics" aria-label="q3 이산수학을 영어로   discrete mathematics permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Q3. 이산수학을 영어로? - Discrete Mathematics</h4>
 </blockquote>
 <h3 id="이산수학의-주제" style="position:relative;"><a href="#%EC%9D%B4%EC%82%B0%EC%88%98%ED%95%99%EC%9D%98-%EC%A3%BC%EC%A0%9C" aria-label="이산수학의 주제 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>이산수학의 주제</h3>
 <ul>
