--- a/installKaliLinux/index.html
+++ b/installKaliLinux/index.html
@@ -910,7 +910,6 @@
     </span></p>
 <p>eth0에 inet 확인.</p>
 <br/>
-<p>화면 깨끗!</p>
 <div class="gatsby-highlight" data-language="text"><pre class="language-text"><code class="language-text">$ clear</code></pre></div>
 <p><span
       class="gatsby-resp-image-wrapper"
@@ -944,6 +943,7 @@
       />
   </a>
     </span></p>
+<p>화면 깨끗!</p>
 <br/>
 <h2 id="2-데이터-정상적으로-나가는-지-확인" style="position:relative;"><a href="#2-%EB%8D%B0%EC%9D%B4%ED%84%B0-%EC%A0%95%EC%83%81%EC%A0%81%EC%9C%BC%EB%A1%9C-%EB%82%98%EA%B0%80%EB%8A%94-%EC%A7%80-%ED%99%95%EC%9D%B8" aria-label="2 데이터 정상적으로 나가는 지 확인 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>2. 데이터 정상적으로 나가는 지 확인</h2>
 <div class="gatsby-highlight" data-language="text"><pre class="language-text"><code class="language-text">$ ping 8.8.8.8</code></pre></div>
@@ -978,8 +978,8 @@
         loading="lazy"
       />
   </a>
-    </span>
-<span
+    </span></p>
+<p><span
       class="gatsby-resp-image-wrapper"
       style="position: relative; display: block; margin-left: auto; margin-right: auto; max-width: 590px; "
     >
@@ -1049,8 +1049,7 @@
   </a>
     </span></p>
 <p>초기 비밀번호 'kali' 입력</p>
-<p>비밀번호가 안보이는 건 정상.</p>
-<p>화면에 나오지 않을 뿐 입력되고 있음.</p>
+<p>비밀번호가 안보이는 건 정상이다. 화면에 나오지 않을 뿐 입력되고 있음.</p>
 <p><span
       class="gatsby-resp-image-wrapper"
       style="position: relative; display: block; margin-left: auto; margin-right: auto; max-width: 590px; "
@@ -1119,9 +1118,6 @@
 <br/>
 <h2 id="4-비밀번호-변경" style="position:relative;"><a href="#4-%EB%B9%84%EB%B0%80%EB%B2%88%ED%98%B8-%EB%B3%80%EA%B2%BD" aria-label="4 비밀번호 변경 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>4. 비밀번호 변경</h2>
 <div class="gatsby-highlight" data-language="text"><pre class="language-text"><code class="language-text"># passwd</code></pre></div>
-<p>새로운 비번 입력</p>
-<p>-> 다시 입력</p>
-<p>-> 성공!</p>
 <p><span
       class="gatsby-resp-image-wrapper"
       style="position: relative; display: block; margin-left: auto; margin-right: auto; max-width: 590px; "
@@ -1154,6 +1150,7 @@
       />
   </a>
     </span></p>
+<p>새로운 비번 입력 -> 다시 입력 -> 성공!</p>
 <br/>
 <h2 id="5-업데이트" style="position:relative;"><a href="#5-%EC%97%85%EB%8D%B0%EC%9D%B4%ED%8A%B8" aria-label="5 업데이트 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>5. 업데이트</h2>
 <div class="gatsby-highlight" data-language="text"><pre class="language-text"><code class="language-text"># apt-get update</code></pre></div>
